2011-01-18  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Eric Seidel.

        make file expansion use the file at the svn revision the diff was created at
        https://bugs.webkit.org/show_bug.cgi?id=52650

        This only works for patches created with SVN for now since the git
        diff does not include SVN revision numbers in it.

        * PrettyPatch/PrettyPatch.rb:
        * code-review.js:

2011-01-15  Adam Barth  <abarth@webkit.org>

        Rubber-stamped by Eric Seidel.

        Move WebKit2 into Source
        https://bugs.webkit.org/show_bug.cgi?id=52438

        Remove WebKit2 from the list of top-level source directories.

        * PrettyPatch/PrettyPatch.rb:

2011-01-14  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Adam Barth.

        fix expanded lines in the code review tool
        https://bugs.webkit.org/show_bug.cgi?id=52498

        Fixes them to work now that we have wrapper divs.
        Also fixes the long-standing bug that the line numbers
        were incorrect sometimes.

        * code-review.js:

2011-01-14  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Adam Barth.

        put remove lines to the left of add lines in sidebyside view
        https://bugs.webkit.org/show_bug.cgi?id=52458

        Also, sneaking in a fix to make long lines with no whitespace wrap.

        * PrettyPatch/PrettyPatch.rb:
        * code-review.js:

2011-01-14  Ojan Vafai  <ojan@chromium.org>

        Fix bad merge in r75816.

        * code-review.js:

2011-01-14  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Adam Barth.

        improve line selection with fast drags
        https://bugs.webkit.org/show_bug.cgi?id=52477

        * code-review.js:

2011-01-14  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Adam Barth.

        tweak line selection in code review tool
        https://bugs.webkit.org/show_bug.cgi?id=52462

        -Improve handling of data-comment-base-line code to deal with