@@ -1,3 +1,12 @@
+2011-01-14  Ojan Vafai  <ojan@chromium.org>
+
+        Reviewed by Adam Barth.
+
+        make line selection have a extend only from where you start the selection in the code review tool
+        https://bugs.webkit.org/show_bug.cgi?id=52485
+
+        * code-review.js:
+
 2011-01-18  Ojan Vafai  <ojan@chromium.org>
 
         Reviewed by Eric Seidel.
